Refactored reusable code into functions, and added the ability to delete a bad section.
- Added logic to delete a segment between a start and end index.
- Refactored logic into functions to compute correction factor, interpolate between points, delete between points, and create chart traces.
- Deleted 2018 notebook which is deprecated or easily replicated.

--- a/2507_editor_and_smoother.ipynb
+++ b/2507_editor_and_smoother.ipynb
@@ -15,8 +15,10 @@
    "source": [
     "import copy\n",
     "import gpxpy\n",
+    "from gpxpy.gpx import GPXTrackPoint\n",
     "\n",
     "import numpy as np\n",
+    "from numpy import ndarray\n",
     "from sklearn.metrics import DistanceMetric\n",
     "\n",
     "# import xml.etree.ElementTree as et\n",
@@ -24,6 +26,15 @@
     "import plotly.graph_objs as go\n",
     "\n",
     "init_notebook_mode()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext jupyter_black"
    ]
   },
   {
@@ -39,10 +50,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"activity_data/250721_morning_run_original.gpx\", \"r\") as gpx_file:\n",
+    "with open(\"activity_data/250729_Morning_Run_orig.gpx\", \"r\") as gpx_file:\n",
     "    gpx_initial = gpxpy.parse(gpx_file)\n",
     "\n",
-    "gpx = copy.deepcopy(gpx_initial)"
+    "gpx = copy.deepcopy(gpx_initial)\n",
+    "points = gpx.tracks[0].segments[0].points\n",
+    "print(f\"{len(points) = }\")"
    ]
   },
   {
@@ -51,18 +64,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "points = gpx.tracks[0].segments[0].points"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "points_radians = np.array(\n",
-    "    [[point.latitude * np.pi / 180, point.longitude * np.pi / 180] for point in points]\n",
-    ")"
+    "def compute_local_correction(point: GPXTrackPoint) -> float:\n",
+    "    \"\"\"Computes the local correction that makes 1 unit change in lat equal to 1 unit in lon.\"\"\"\n",
+    "    dist = DistanceMetric.get_metric(\"haversine\")\n",
+    "    epsilon = 0.00001\n",
+    "    point_radians = (np.pi / 180) * np.array([point.latitude, point.longitude])\n",
+    "\n",
+    "    ddist_lat = dist.pairwise(np.array([point_radians, point_radians + [epsilon, 0]]))\n",
+    "    ddist_lon = dist.pairwise(np.array([point_radians, point_radians + [0, epsilon]]))\n",
+    "    correction = ddist_lat[0, 1] / ddist_lon[1, 0]\n",
+    "\n",
+    "    return correction\n",
+    "\n",
+    "\n",
+    "def trace_from_points(points: list[GPXTrackPoint], correction_factor: float) -> list[str]:\n",
+    "    trace = go.Scatter(\n",
+    "        x=[point.longitude for point in points],\n",
+    "        y=[point.latitude * correction_factor for point in points],\n",
+    "        text=[f\"id: {i}\" for i in list(range(len(points)))],\n",
+    "    )\n",
+    "\n",
+    "    return trace"
    ]
   },
   {
@@ -80,24 +102,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dist = DistanceMetric.get_metric(\"haversine\")\n",
-    "local_point = points_radians[0]\n",
-    "\n",
-    "epsilon = 0.00001\n",
-    "\n",
-    "ddist_lat = dist.pairwise(np.array([local_point, local_point + [epsilon, 0]]))\n",
-    "ddist_lon = dist.pairwise(np.array([local_point, local_point + [0, epsilon]]))\n",
-    "correction_factor = ddist_lat[0, 1] / ddist_lon[0, 1]\n",
-    "\n",
-    "print(f\"map projection correction_factor = {correction_factor:.3f}\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -110,18 +114,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_labels = [\n",
-    "    f\"id {ix}:({points[ix].latitude:.7f}, {points[ix].longitude:.7f})\" for ix in range(len(points))\n",
-    "]\n",
-    "print(data_labels[:4])\n",
-    "\n",
-    "trace = go.Scatter(\n",
-    "    x=points_radians[:, 1],\n",
-    "    y=points_radians[:, 0] * correction_factor,\n",
-    "    text=data_labels,\n",
-    ")\n",
-    "\n",
-    "data = [trace]\n",
+    "correction_factor = compute_local_correction(points[0])\n",
+    "data = [trace_from_points(points, correction_factor)]\n",
     "\n",
     "layout = go.Layout(\n",
     "    yaxis=dict(scaleanchor=\"x\", scaleratio=1),\n",
@@ -142,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Start and end of bad segment"
+    "### with interpolation"
    ]
   },
   {
@@ -151,15 +145,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_ix = 1633\n",
-    "end_ix = 1680"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Store old data"
+    "def interpolate_segment(\n",
+    "    points: list[GPXTrackPoint], start_ix: int, end_ix: int\n",
+    ") -> list[GPXTrackPoint]:\n",
+    "    \"\"\"Interpolates between two points, given by index.  Returns the original\n",
+    "    section for convenience of plotting.\"\"\"\n",
+    "    orig_segment = copy.deepcopy(points[start_ix : end_ix + 1])\n",
+    "\n",
+    "    start_point = np.array(\n",
+    "        [\n",
+    "            points[start_ix].latitude,\n",
+    "            points[start_ix].longitude,\n",
+    "            points[start_ix].elevation,\n",
+    "        ]\n",
+    "    )\n",
+    "    end_point = np.array(\n",
+    "        [points[end_ix].latitude, points[end_ix].longitude, points[end_ix].elevation]\n",
+    "    )\n",
+    "\n",
+    "    start_time = points[start_ix].time\n",
+    "    end_time = points[end_ix].time\n",
+    "\n",
+    "    dpos = end_point - start_point\n",
+    "    dt = end_time - start_time\n",
+    "\n",
+    "    for point in points[start_ix + 1 : end_ix]:\n",
+    "        p = (point.time - start_time) / dt\n",
+    "        new_point = start_point + p * dpos\n",
+    "\n",
+    "        point.latitude = round(new_point[0], 7)\n",
+    "        point.longitude = round(new_point[1], 7)\n",
+    "        point.elevation = round(new_point[2], 1)\n",
+    "\n",
+    "    return orig_segment"
    ]
   },
   {
@@ -168,81 +186,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bad_points = copy.deepcopy(points[start_ix : end_ix + 1])\n",
-    "bad_points_labels = [\n",
-    "    f\"id {ix + start_ix}:({bad_points[ix].latitude:.6f}, {bad_points[ix].longitude:.6f})\"\n",
-    "    for ix in range(len(bad_points))\n",
+    "start_ix = 251\n",
+    "end_ix = 300"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orig_segment = interpolate_segment(points, start_ix, end_ix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "correction_factor = compute_local_correction(points[0])\n",
+    "\n",
+    "data = [\n",
+    "    trace_from_points(points, correction_factor),\n",
+    "    trace_from_points(orig_segment, correction_factor),\n",
     "]\n",
-    "bad_points_radians = np.array(\n",
-    "    [[point.latitude * np.pi / 180, point.longitude * np.pi / 180] for point in bad_points]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Interpolate and update `points`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "start_point = np.array(\n",
-    "    [points[start_ix].latitude, points[start_ix].longitude, points[start_ix].elevation]\n",
-    ")\n",
-    "end_point = np.array([points[end_ix].latitude, points[end_ix].longitude, points[end_ix].elevation])\n",
-    "\n",
-    "start_time = points[start_ix].time\n",
-    "end_time = points[end_ix].time\n",
-    "\n",
-    "dpos = end_point - start_point\n",
-    "dt = end_time - start_time\n",
-    "\n",
-    "for point in points[start_ix + 1 : end_ix]:\n",
-    "    p = (point.time - start_time) / dt\n",
-    "    new_point = start_point + p * dpos\n",
-    "    point.latitude = round(new_point[0], 7)\n",
-    "    point.longitude = round(new_point[1], 7)\n",
-    "    point.elevation = round(new_point[2], 1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Compare before and after"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_labels = [\n",
-    "    f\"id {ix}:({points[ix].latitude:.7f}, {points[ix].longitude:.7f})\" for ix in range(len(points))\n",
-    "]\n",
-    "points_radians = np.array(\n",
-    "    [[point.latitude * np.pi / 180, point.longitude * np.pi / 180] for point in points]\n",
-    ")\n",
-    "\n",
-    "points_trace = go.Scatter(\n",
-    "    x=points_radians[:, 1],\n",
-    "    y=points_radians[:, 0] * correction_factor,\n",
-    "    text=data_labels,\n",
-    ")\n",
-    "\n",
-    "bad_points_trace = go.Scatter(\n",
-    "    x=bad_points_radians[:, 1],\n",
-    "    y=bad_points_radians[:, 0] * correction_factor,\n",
-    "    text=bad_points_labels,\n",
-    ")\n",
-    "\n",
-    "data = [points_trace, bad_points_trace]\n",
     "\n",
     "layout = go.Layout(\n",
     "    yaxis=dict(scaleanchor=\"x\", scaleratio=1),\n",
@@ -250,6 +218,62 @@
     ")\n",
     "\n",
     "iplot(go.Figure(data=data, layout=layout))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### with section removal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def delete_segment(points: list[GPXTrackPoint], start_ix, end_ix) -> list[GPXTrackPoint]:\n",
+    "    \"\"\"Deletes a section of bad data from Strava. Strava will interpret this\n",
+    "    as the watch being stopped, and simply not count this interval.\"\"\"\n",
+    "    orig_segment = copy.deepcopy(points[start_ix : end_ix + 1])\n",
+    "    del points[start_ix : end_ix + 1]\n",
+    "\n",
+    "    return orig_segment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_ix = 1089\n",
+    "end_ix = 2466\n",
+    "\n",
+    "orig_segment = delete_segment(points, start_ix, end_ix)\n",
+    "correction_factor = compute_local_correction(points[0])\n",
+    "\n",
+    "data = [\n",
+    "    trace_from_points(points, correction_factor),\n",
+    "    trace_from_points(orig_segment, correction_factor),\n",
+    "]\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    yaxis=dict(scaleanchor=\"x\", scaleratio=1),\n",
+    "    height=600,\n",
+    ")\n",
+    "\n",
+    "iplot(go.Figure(data=data, layout=layout))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(points)"
    ]
   },
   {
@@ -265,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"activity_data/250721_morning_run_fixed.gpx\", \"w\") as out_file:\n",
+    "with open(\"activity_data/250729_Morning_Run_fixed.gpx\", \"w\") as out_file:\n",
     "    out_file.write(gpx.to_xml())"
    ]
   }
